Implement default Shadow DOM composition for individual partials
Update bower dependencies:

 * StarcounterSamples/launcher-include@4011f09497
 * Starcounter/starcounter-layout-html-editor@1f70df4b9d

Starcounter/RebelsLounge/issues/38
Starcounter/RebelsLounge/issues/32

--- a/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
+++ b/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
@@ -68,6 +68,18 @@ version: 0.5.0
             var clone = document.importNode(templ.content, true);
             this.compositionElement = clone.children[0]; // .getElementsByTagName("juicy-composition");
             this.template = this.compositionElement.firstElementChild; // .getElementsByTagName("TEMPLATE");
+            var that = this;
+            this.template.addEventListener('stamping', function fetchCompositions(event) {
+                var mergedComposition = new DocumentFragment();
+                var templates = event.detail.querySelectorAll('template[is="starcounter-composition"]');
+                Array.prototype.forEach.call(templates, function mergeContents(individualComposition) {
+                    mergedComposition.appendChild(individualComposition.content);
+                });
+                that.defaultComposition = mergedComposition;
+                // notify composition property
+                // TODO: consider moving entire partialChanged or appendChild here
+                that._compositionChanged();
+            });
             html && this.template.setAttribute('content', html);
 
             // define a setter for partial attribute,
@@ -147,14 +159,14 @@ version: 0.5.0
             }
         };
 
-        LauncherPartialPrototype._compositionChanged = function() {
-            var composition;
-            if (this.partial) {
+        LauncherPartialPrototype._compositionChanged = function(composition) {
+            if (this.partial && composition === undefined) {
                 if (this.partial.Launcher) {
                     composition = this.partial.Launcher.Composition; //should always be string
                 }
             }
-            if (composition !== this._lastLayout || this._forceLayoutChange) {
+            // do not change if there is one, it's same as before, and we are not forced
+            if (!composition || composition !== this._lastLayout || this._forceLayoutChange) {
                 if (!composition) {
                     this.storedLayout = null;
                     this.compositionElement.composition = this.defaultComposition;
@@ -255,6 +267,9 @@ version: 0.5.0
                     }
                     console.info("juicy-composition configuration saved");
                 }
+                // FIXME: bellow is required for save button not to overwrite with old value, but it fails due to puppet error
+                console.info('Direct change to model is required for save button not to overwrite with old value, but it fails due to puppet error.');
+                this.partial.Launcher.Composition = this.storedLayout;
                 this.dispatchEvent(new CustomEvent("starcounter-include-composition-saved", {detail: this.storedLayout}));
                 // trigger polymer-notification-protocol-compilant event
                 this.dispatchEvent(new CustomEvent("partial-changed", {detail: {value: this.storedLayout, path: 'partial.Launcher.Composition'}}));
