--- a/src/Launcher/wwwroot/Launcher/viewmodels/SettingsPage.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/SettingsPage.html
@@ -1,3 +1,13 @@
 ﻿<template>
-    <h1>App Settings</h1>
+    <template id="2" is="dom-bind">
+        <h1>Launcher Settings</h1>
+        <div>
+            <label class="control-label" for="ignore-url-pattern"><strong>Bypass Launcher for URLs:</strong></label>
+            <input type="text" class="form-control" id="ignore-url-pattern" aria-describedby="ignore-url-pattern" value="{{model.IgnoreUrlPattern$::input}}">
+        </div>
+        <br/>
+        <button type="button" class="btn btn-primary" value="{{model.Save$::click}}" onclick="++this.value;">Save Launcher settings</button>
+        <br />
+        <h1>App Settings</h1>
+    </template>
 </template>
