Move Baypass into OnJsonMerge method to cover LayoutInfo creation #239

--- a/src/Launcher/wwwroot/Launcher/viewmodels/SettingsPage.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/SettingsPage.html
@@ -6,7 +6,7 @@
             <input type="text" class="form-control" id="ignore-url-pattern" aria-describedby="ignore-url-pattern" value="{{model.IgnoreUrlPattern$::input}}">
         </div>
         <br/>
-        <button type="button" class="btn btn-primary" value="{{model.Save$::click}}" onclick="++this.value;">Save Launcher settings</button>
+        <button type="button" class="btn btn-primary" value="{{model.Save$::click}}" onmousedown="++this.value;">Save Launcher settings</button>
         <br />
         <h1>App Settings</h1>
     </template>
