Remove unecessary id from template Move launcher settings into proper path #239

--- a/src/Launcher/wwwroot/Launcher/viewmodels/SettingsPage.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/SettingsPage.html
@@ -1,5 +1,5 @@
 ﻿<template>
-    <template id="2" is="dom-bind">
+    <template is="dom-bind">
         <h1>Launcher Settings</h1>
         <div>
             <label class="control-label" for="ignore-url-pattern"><strong>Bypass Launcher for URLs:</strong></label>
