--- a/src/Launcher/wwwroot/sys/juicy-ace-editor/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-ace-editor/index.html
@@ -25,7 +25,7 @@
 	    juicy-ace-editor {
 	    	margin: 15px 15px;
 	        width: 45%;
-	        height: 13em;
+            min-height: 12em;
 	    }
 	    .markdown-body{
 	    	margin: 1em auto;
