Add test for freezing inactive workspaces. #215

--- a/test/Launcher_AcceptanceHelperOne/wwwroot/Launcher_AcceptanceHelperOne/Master.html
+++ b/test/Launcher_AcceptanceHelperOne/wwwroot/Launcher_AcceptanceHelperOne/Master.html
@@ -36,7 +36,7 @@
     </div>
     <template is="dom-bind">
         <p>
-            This is a shared thing: <input type="text" value="{{model.SharedValue.Description$::input}}" />
+            This is a shared thing: <input type="text" value="{{model.SharedValue.Description$::input}}" id="helper-one-input"/>
         </p>
     </template>
 </template>
