--- a/test/Launcher_AcceptanceHelperTwo/wwwroot/Launcher_AcceptanceHelperTwo/Master.html
+++ b/test/Launcher_AcceptanceHelperTwo/wwwroot/Launcher_AcceptanceHelperTwo/Master.html
@@ -2,7 +2,7 @@
     <template is="dom-bind">
         <h2>This is Launcher Acceptance Helper Two</h2>
         <p>
-            This is a shared thing: <input type="text" value="{{model.SharedValue.Description$::input}}" />
+            This is a shared thing: <input type="text" value="{{model.SharedValue.Description$::input}}" id="helper-two-input"/>
         </p>
     </template>
 </template>
