--- a/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-multiview.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-multiview.html
@@ -102,24 +102,36 @@
       },
       UpdateActive: function() {
         for (var i = 0; i < this.apps.length; i++) {
+
           var notedActive = this.apps[i].data.Active$;
+
           if (!this._activeApp && notedActive)
             this._activeApp = this.apps[i].name;
+
+
           if (this._activeApp != this.apps[i].name) {
             if (notedActive) {
               var str = 'data.'+this.apps[i].name+".Active$";
+
               this.async( function() {
                 this.set(str, false);
                 window.tu.puppetDirtyCheck();
+
               });
             }
             this.set('apps.#'+i+'.active', false);
           }
           else if (notedActive && this._activeApp == this.apps[i].name && !this.apps[i].active) {
             this.set('apps.#'+i+'.active', true);
+
           }
         }
         if (this._activeApp && this._activeApp != 'none') {
+
+          this.debounce('trackAction', function () {
+              if(window.tu)window.tu.trackAction("Activate sidepanel", this._activeApp);
+          }, 300);
+
           this.fire("panel-command", { status: "open" });
         } else {
           this.fire("panel-command", { status: "close"});
