--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
@@ -18,13 +18,14 @@
           outline: none;
           color: inherit;
           font-weight: 200;
-          padding-left:0px;
+          padding:0 0 5px 0;
           font-size: 14px;
           font-family: 'Lato';
         }
 
         input::-webkit-input-placeholder {
-          opacity: 0.5;
+          color: rgba(255,255,255,.25);
+          noopacity: 0.5;
         }
 
         input::-moz-placeholder {
