--- a/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-panels.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-panels.html
@@ -82,11 +82,12 @@
               position: absolute;
               right: 0px;
               top: 0px;
-              border-left: 1px solid rgba(0,0,0,0.1);
+             
               width: 35px;
               height: 60px;
               z-index: 1;
-              background: rgba(0,0,0,.05);
+              
+              background: linear-gradient(to right, rgba(0,0,0,0.025) 0%, rgba(0,0,0,0.0) 100%);
             }
 
             /* Media query states */
