--- a/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
+++ b/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
@@ -4,7 +4,7 @@ Custom Element (w/ Polymer's TempalteBinding)
 with predefined template content, which should be used to include partials.
 It's just <template is="imported-template"> wrapped within <juicy-composition> bindable by layout editor.
 Uses juicy-composition.composition given from DB as `Starcounter.MergedPartial.Composition`.
-version: 1.0.0
+version: 1.0.1
 
 -->
 <!-- Import dependencies -->
@@ -182,7 +182,7 @@ version: 1.0.0
             if (path.indexOf("partial.") == 0) {
                 if (
                     path === "partial.Html" ||
-                    path.indexOf("partial.LauncherLayoutInfo.") === 0 ||
+                    path.indexOf("partial.LauncherLayoutInfo") === 0 ||
                     // path.match(/^partial\.[^.]+\.Html$/)
                     (path.indexOf('.Html') === path.length - 5) && path.slice(8, -5).indexOf('.') === -1
                 ) {
