--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -33,7 +33,7 @@
             }
 
             .launchpad-tile:hover .launchpad-icon {
-                box-shadow: inset 0px 0px 10px rgba(138, 152, 176,0.8);
+                background: rgba(108, 189, 203, .1);
             }
 
             .launchpad-tile > a,
