--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
@@ -1,6 +1,7 @@
 ﻿<link rel="import" href="/sys/polymer/polymer.html" />
 <link rel="import" href="/tu-common/css/tu-fontawesome.html">
 
+
 <dom-module id="launcher-search">
     <style include="tu-fontawesome"></style>
     <style>
@@ -84,7 +85,8 @@
         }
     </style>
     <template>
-      <input placeholder="{{placeholder}}" value="{{data.query$::input}}" on-keydown='onKeyDown' on-keyup='onKeyUp' on-blur="onBlur" />
+      <div class="container">
+      <input id="thisinput" placeholder="{{placeholder}}" value="{{data.query$::input}}" on-keydown='onKeyDown' on-keyup='onKeyUp' on-blur="onBlur" />
       <span style="padding-bottom: 5px;margin-right:10px;" id="search-icon"><i class="fa fa-search" style="font-size:0.70em;color:rgba(255,255,255,.5)"></i></span>
 
       <div id="preview" class="preview">
@@ -103,6 +105,7 @@
             <span class="no-result">No result</span>
           </template>
         </div>
+      </div>
       </div>
     </template>
     <script>
@@ -128,6 +131,7 @@
             ],
             colors: [],
             ready: function () {
+                
             },
             optionsChanged: function(options) {
             },
