--- a/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-panels.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-panels.html
@@ -63,6 +63,8 @@
               z-index: 3;
               background: #fff;
               border-left: solid 1px #aaa;
+              transition: width .3s ease;
+             
             /*  will-change: transform;
               transition: transform ease-in-out 0s, width ease-in-out 0s, visibility 0s;*/
             }
