--- a/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-panels.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-panels.html
@@ -181,7 +181,7 @@
             }
 
             #contextPanel {
-              transition: width 0.5s;
+              transition: width 0.2s ease;
             }
             #contextPanel.minimized #widthtracker {
               visibility: collapse;
