--- a/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
+++ b/src/Launcher/wwwroot/sys/starcounter-include/starcounter-include.html
@@ -4,7 +4,7 @@ Custom Element (w/ Polymer's TempalteBinding)
 with predefined template content, which should be used to include partials.
 It's just <template is="imported-template"> wrapped within <juicy-composition> bindable by layout editor.
 Uses juicy-composition.composition given from DB as `Starcounter.MergedPartial.Composition`.
-version: 1.0.1
+version: 1.1.0
 
 -->
 <!-- Import dependencies -->
@@ -246,7 +246,7 @@ version: 1.0.1
             // FIXME: temporary workaround for servers not accepting JSON-Patch
             // from juicy-tiles-setup-sync
             var req = new XMLHttpRequest();
-            req.open("POST", this.compositionAPI + "?key=" + this.partialId + '&ver=', true);
+            req.open("POST", this.compositionAPI + "?key=" + encodeURIComponent(this.partialId) + '&ver=', true);
             req.onreadystatechange = function () {
                 if (req.readyState == 4) {
                     if (!(req.status >= 200 && req.status <= 299)) {
