:boom: change branch of starcounter-layout-html-editor
sorry @tomalec, this was the only way for me to add some fixes. The current `gh-pages` branch in starcounter-layout-html-editor seems unfinished, so I needed to create a master branch from HEAD~1

--- a/src/Launcher/wwwroot/sys/starcounter-layout-html-editor/starcounter-layout-html-editor.html
+++ b/src/Launcher/wwwroot/sys/starcounter-layout-html-editor/starcounter-layout-html-editor.html
@@ -40,9 +40,15 @@ version: 0.0.0
         </style>
         <label class="partial-picker">
             <input
+                list="selector-autocomplete"
                 type="text"
                 placeholder="css selector for partial to edit"
                 value="{{selector::input}}"/>
+            <datalist id="selector-autocomplete">
+                <template is="dom-repeat" items="{{knownSelectors}}">
+                  <option value="{{item}}"></option>
+                </template>
+            </datalist>
         </label>
         <!-- <code>{{selector}}</code> -->
         <div id="editor-area">
@@ -55,7 +61,7 @@ version: 0.0.0
                 wrapmode="true"></juicy-ace-editor>
         </div>
         <div id="buttons">
-            <button on-click="revert" disabled$="{{disabled}}">Revert</button>
+            <button on-click="revert" disabled$="{{disabled}}">Cancel</button>
             <button on-click="restore" disabled$="{{disabled}}">Restore default</button>
             <button on-click="save" disabled$="{{disabled}}">Save</button>
         </div>
@@ -90,6 +96,10 @@ version: 0.0.0
                     type: String,
                     observer: '_contentChanged',
                     value: ''
+                },
+                knownSelectors: {
+                    type: Array,
+                    value: []
                 }
             },
 
@@ -109,10 +119,26 @@ version: 0.0.0
                 }
             },
             // Fires when an instance of the element is created
-            created: function () {},
+            created: function () {
+            },
 
             // Fires when the local DOM has been fully prepared
-            ready: function () {},
+            ready: function() {
+                this.addEventListener('mouseup', function(ev) {
+                    window.dispatchEvent(new Event('resize')); //fix resizing of ACE edior
+                });
+
+                var that = this;
+                var elems = Array.prototype.slice.call(document.querySelectorAll("starcounter-include"));
+                elems.forEach(function(elem) {
+                    var selector = trySelectorFromAttribute("slot", elem) ||
+                        trySelectorFromAttribute("partial-id", elem) ||
+                        trySelectorFromAttribute("id", elem);
+                    if (selector) {
+                        that.push("knownSelectors", selector);
+                    }
+                });
+            },
 
             // Fires when the element was inserted into the document
             attached: function () {},
@@ -150,6 +176,18 @@ version: 0.0.0
 
             }
         });
+
+        function matchElement(selector, elem) {
+            return document.querySelector(selector) === elem;
+        }
+
+        function trySelectorFromAttribute(attr, elem) {
+            var selector = '[' + attr + '="' + elem.getAttribute(attr) + '"]';
+            if (matchElement(selector, elem)) {
+                return selector;
+            }
+            return false;
+        }
 
         function selectElementByString(selector) {
             var element;
