--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -128,7 +128,7 @@
     <template id="root-launcher-dom-bind" is="dom-bind">
 
         <div class="launcher-toolbar launcher-topbar">
-            <div style="margin-left: 10px;min-width: 129px;max-width: 195px;">
+            <div style="">
                 <tu-logo-with-spinner></tu-logo-with-spinner>
             </div>
 
