--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
@@ -93,9 +93,9 @@
         <div id='result'>
           <template is="dom-repeat" items="{{types}}" as="type">
             <div class="typeheader"><span style="flex:1">{{type.Type}}</span>(<span>{{type.Count}}</span>)</div>
-            <div class="items">
+            <div index$={{index}} class="items">
               <template is="dom-repeat" items="{{type.Items}}" as="item">
-                <div class="item" on-mouseover='itemHovered' on-tap='itemTapped'>
+                <div class="item" index$="{{index}}" on-mouseover='itemHovered' on-tap='itemTapped'>
                   <template is="imported-template" model="{{item}}" content$="{{item.Html}}"></template>
                 </div>
               </template>
@@ -131,7 +131,7 @@
             ],
             colors: [],
             ready: function () {
-                
+
             },
             optionsChanged: function(options) {
             },
@@ -257,6 +257,19 @@
               }
               return "";
             },
+            getNameFromType:function(type) {
+              for (var name in this.data.previewResult)
+              {
+                if (this.data.previewResult.hasOwnProperty(name) &&
+                    this.data.previewResult[name].hasOwnProperty("Types")) {
+                      for (var i = 0; i < this.data.previewResult[name].Types.length; i++) {
+                        if (this.data.previewResult[name].Types[i] == type)
+                          return name;
+                      }
+                }
+              }
+              return "";
+            },
             onKeyDown: function (event) {
                 switch (event.keyCode)
                 {
@@ -293,11 +306,10 @@
             {
               var data = item._templateInstance.__data__.item;
               var number = data.Activate$;
-              var itemIndex = data.$parent.indexOf(data);
-              data = data.$parent.$parent;
-              var typeIndex = data.$parent.indexOf(data);
-              data = data.$parent.$parent;
-              var appname = this.getName(data);
+              var itemIndex = item.getAttribute('index');
+              var typeIndex = item.parentElement.getAttribute('index');
+              var type = item.parentElement._templateInstance.__data__.type;
+              var appname = this.getNameFromType(type);
               var path = "data.previewResult." + appname + ".Types.#" + typeIndex + ".Items.#" + itemIndex + ".Activate$";
               this.set(path, number + 1);
               this.set('data.query$',  "");
