Logo and menu fix

--- a/src/Launcher/wwwroot/Launcher/elements/tu-logo-with-spinner/tu-logo-with-spinner.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-logo-with-spinner/tu-logo-with-spinner.html
@@ -1,9 +1,18 @@
 <dom-module id="tu-logo-with-spinner">
   <style type="text/css">
+  :host{
+    display: flex;
+  }
             .visiblespinner
             {
 
                 display: block !important;
+            }
+            span.logoname{
+              margin-left: 8px;
+              margin-top: 4px;
+              font-size: 16px;
+              opacity: .95;
             }
 
             #spinner {
@@ -17,7 +26,7 @@
 
             #logo
             {
-                width:68px;
+                width:27px;
                 height:28px;
                 
                 background: url(/Launcher/elements/cl-logo/cl-logo-fff.png);
@@ -185,6 +194,7 @@
         </style>
   <template>
             <div id="logo" onclick="puppet.puppet.morphUrl('/')"></div>
+            <span class="logoname">Colaber</span>
             <div class="timer" id="spinner">
                 Loading...
             </div>
