--- a/src/Launcher/wwwroot/Launcher/elements/tu-logo-with-spinner/tu-logo-with-spinner.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-logo-with-spinner/tu-logo-with-spinner.html
@@ -36,8 +36,10 @@
                 cursor: pointer;
                 
                 transition: opacity 400ms ease;
+
+                margin: 0px 2px 0px 6px;
             }
-            #logo:hover, #logo.hover
+            #logo:hover, #logo.hover 9813 
             {
 
                 opacity: .75;
@@ -194,7 +196,7 @@
         </style>
   <template>
             <div id="logo" onclick="puppet.puppet.morphUrl('/')"></div>
-            <span class="logoname">Colaber</span>
+            <!--<span class="logoname">Colaber</span>-->
             <div class="timer" id="spinner">
                 Loading...
             </div>
